--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "react-native-voice-recorder",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "React Native: Native Voice Recorder",
   "main": "RNVoiceRecorder.js",
-  "homepage": "https://github.com/prscX/react-native-voice-recorder.git",
+  "homepage": "https://github.com/gabrielalao/react-native-voice-recorder",
   "repository": {
     "type": "git",
-    "url": "https://github.com/prscX/react-native-voice-recorder.git"
+    "url": "https://github.com/gabrielalao/react-native-voice-recorder"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -14,7 +14,7 @@
   "keywords": [
     "react-native"
   ],
-  "author": "Pranav Raj Singh Chauhan",
+  "author": "Gabriel Alao",
   "dependencies": {
   },
   "devDependencies": {
